<resources>
    <string name="app_name">AstroWeather</string>
    <string name="menu_settings">Opcje</string>
    <string name="menu_delay">Opóźnienie</string>
    <string name="eastMoonText">Wschód księżyca:</string>
    <string name="westMoonText">Zachód księżyca:</string>
    <string name="newMoonText">Najbliższy nów</string>
    <string name="fullMoonText">Najbliższa pełnia:</string>
    <string name="moonStageText">Faza księżyca:</string>
    <string name="probeDayText">Dzień m. sondycznego:</string>
    <string name="eastSunTimeText">Wschód słońca:</string>
    <string name="eastSunAzimuthText">Wschód słonca (azymut):</string>
    <string name="westSunTimeText">Zachód słońca:</string>
    <string name="westSunAzimuthText">Zachód słońca (azymut):</string>
    <string name="twilightSunText">Zmierzch:</string>
    <string name="dawnSunText">Świt:</string>
    <string name="latitudeText">Szerokość geograficzna:</string>
    <string name="longitudeText">Długość geograficzna:</string>
    <string name="refreshRateText">Częstotliwość odświeżania:</string>
    <string name="sun">SŁOŃCE</string>
    <string name="moon">KSIĘŻYC</string>
    <string name="favourite_localizations">Aktualne ulubione pozycje</string>
    <string name="add_new_localization">Dodaj nową lokalizacje</string>
    <string name="name">Nazwa:</string>
    <string name="add">Dodaj</string>
    <string name="delete">Usuń</string>
    <string name="add_localization_fail">Popraw dane!</string>
    <string name="weather">POGODA</string>
    <string name="temperature">Temperatura:</string>
    <string name="humidity">Wilgotność:</string>
    <string name="presure">Ciśnienie:</string>
    <string name="wind_speed">Prędkość wiatru:</string>
    <string name="wind_direction">Kierunek wiatru:</string>
    <string name="cloudness">Zachmurzenie:</string>
    <string name="add_localization_success">Dodano!</string>
    <string name="refresh">Odśwież</string>
    <string name="add_localization_wait">Proszę czekać!</string>
    <string name="metric_system">system metryczny</string>
    <string name="imperial_system">system imperialny</string>
    <string name="save">Zapisz</string>
    <string name="add_localization_no_internet_connection">Sprawdź swoje połączenie internetowe!</string>
    <string name="update_data_no_internet">Nie pobrać aktualnych danych! Sprawdz połączenie internetowe!</string>
    <string name="update_data_downloading">Pobieram aktualne informacje!</string>
    <string name="localization_not_found_error">Nie znaleziono w bazie!</string>
</resources>
