<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/moonFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/moon_background">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/moon"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000"
        android:textSize="25sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eastMoonText"
            android:id="@+id/eastLabel"

            android:layout_rowWeight="1"

            android:shadowColor="#ffffff"
            android:textColor="#fc0000"
            android:layout_weight="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:id="@+id/eastValue"
            android:shadowColor="#ffffff"
            android:textColor="#fc0000"
            android:layout_weight="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/westMoonText"
            android:id="@+id/westLabel"
            android:shadowColor="#ffffff"
            android:textColor="#fc0000"
            android:layout_weight="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:id="@+id/westValue"
            android:shadowColor="#ffffff"
            android:textColor="#fc0000"
            android:layout_weight="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newMoonText"
            android:id="@+id/newMoonLabel"
            android:shadowColor="#ffffff"
            android:textColor="#fc0000"
            android:layout_weight="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:id="@+id/newMoonValue"
            android:shadowColor="#ffffff"
            android:textColor="#fc0000"
            android:layout_weight="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fullMoonText"
            android:id="@+id/fullMoonLabel"
            android:shadowColor="#ffffff"
            android:textColor="#fc0000"
            android:layout_weight="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:id="@+id/fullMoonValue"
            android:shadowColor="#ffffff"
            android:textColor="#fc0000"
            android:layout_weight="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moonStageText"
            android:id="@+id/moonStageLabel"
            android:shadowColor="#ffffff"
            android:textColor="#fc0000"
            android:layout_weight="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:id="@+id/moonStageValue"
            android:shadowColor="#ffffff"
            android:textColor="#fc0000"
            android:layout_weight="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/probeDayText"
            android:id="@+id/probeDayLabel"
            android:shadowColor="#ffffff"
            android:textColor="#fc0000"
            android:layout_weight="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:id="@+id/probeDayValue"
            android:shadowColor="#ffffff"
            android:textColor="#fc0000"
            android:layout_weight="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </LinearLayout>


</LinearLayout>